--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,12 +5,68 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: V21Factory
-    network: celo
+    name: V1Factory
+    network: mainnet
     source:
-      address: '0x8c47bD2ABae16323054a19aA562efC87A6c26d29'
+      address: '0x2840d12d926cc686217bb42b80b662c7d72ee787'
+      abi: V1Factory
+      startBlock: 8625240
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V1Factory
+          file: ./abis/V1Factory.json
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: 'Register(address,indexed address,uint256,string,uint256)'
+          handler: handleRegisterV1
+      file: ./src/factory-mapping.ts
+  - kind: ethereum/contract
+    name: V2Factory
+    network: mainnet
+    source:
+      address: '0x1782a13f176e84Be200842Ade79daAA0B09F0418'
+      abi: V2Factory
+      startBlock: 9484660
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V2Factory
+          file: ./abis/V2Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            Register(uint256,address,indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
+          handler: handleRegisterV2
+        - event: Delete(address)
+          handler: handleDeleteV2
+      file: ./src/factory-mapping.ts
+  - kind: ethereum/contract
+    name: V21Factory
+    network: mainnet
+    source:
+      address: '0x38064F40B20347d58b326E767791A6f79cdEddCe'
       abi: V21Factory
-      startBlock: 8691191
+      startBlock: 11499150
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -33,12 +89,115 @@ dataSources:
           handler: handleRegisterV21
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: NiftyMinionFactory
-    network: celo
+    name: V22Factory
+    network: mainnet
     source:
-      address: '0xaD791Ef059A25b6C82e56977C6489974333C5A0C'
+      address: '0xf5add874c8c79b7fa8a86291549a4add50553e52'
+      abi: V22Factory
+      startBlock: 14062775
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V22Factory
+          file: ./abis/V22Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address,address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonV22
+      file: ./src/v22-factory-mapping.ts
+  - kind: ethereum/contract
+    name: MinionFactory
+    network: mainnet
+    source:
+      address: '0x2A0D29d0a9e5DE91512805c3E2B58c1e95700dDa'
+      abi: MinionFactory
+      startBlock: 11499121
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Minion
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: MinionFactory
+          file: ./abis/MinionFactory.json
+        - name: Minion
+          file: ./abis/Minion.json
+      eventHandlers:
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+          handler: handleSummonedMinion
+      file: ./src/minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: V2MinionFactory
+    network: mainnet
+    source:
+      address: '0x88207Daf515e0da1A32399b3f92D128B1BF45294'
+      abi: MinionFactory
+      startBlock: 12227886
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Minion
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: MinionFactory
+          file: ./abis/V2MinionFactory.json
+        - name: Minion
+          file: ./abis/V2Minion.json
+      eventHandlers:
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+          handler: handleSummonedV2Minion
+      file: ./src/minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: MolochDAO
+    network: mainnet
+    source:
+      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
+      abi: V1Moloch
+      startBlock: 7218560
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Member
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: 'SummonComplete(indexed address,uint256)'
+          handler: handleSummonCompleteMoloch
+      file: ./src/legacy-mapping.ts
+  - kind: ethereum/contract
+    name: NiftyMinionFactory
+    network: mainnet
+    source:
+      address: '0x7EDfBDED3077Bc035eFcEA1835359736Fa342209'
       abi: NiftyMinionFactory
-      startBlock: 8691275
+      startBlock: 13016332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -53,10 +212,160 @@ dataSources:
         - event: 'SummonMinion(indexed address,indexed address,string,string,uint256)'
           handler: handleSummonedNiftyMinion
       file: ./src/nifty-minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: SafeMinionFactory
+    network: mainnet
+    source:
+      address: '0xbC37509A283E2bb67fd151c34E72e826C501E108'
+      abi: SafeMinionFactory
+      startBlock: 13199717
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Minion
+      abis:
+        - name: SafeMinionFactory
+          file: ./abis/SafeMinionFactory.json
+      eventHandlers:
+        - event: >-
+            SummonMinion(indexed address,indexed address,indexed
+            address,string,string,uint256)
+          handler: handleSummonedSafeMinion
+      file: ./src/safe-minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: EscrowMinion
+    network: mainnet
+    source:
+      address: '0xc9f9E7FC92A7D3B2b3554be850fFF462B7b382E7'
+      abi: EscrowMinion
+      startBlock: 13489283
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Proposal
+      abis:
+        - name: EscrowMinion
+          file: ./abis/EscrowMinion.json
+      eventHandlers:
+        - event: >-
+            ProposeAction(uint256,address,address,address[],uint256[],uint256[],uint256[],address)
+          handler: handleProposeAction
+        - event: 'ExecuteAction(uint256,address,address)'
+          handler: handleExecuteAction
+      file: ./src/escrow-minion-mapping.ts
 templates:
   - kind: ethereum/contract
+    name: MolochV1Template
+    network: mainnet
+    source:
+      abi: V1Moloch
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/v1-mapping.ts
+      entities:
+        - Moloch
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: 'SummonComplete(indexed address,uint256)'
+          handler: handleSummonComplete
+        - event: >-
+            SubmitProposal(uint256,indexed address,indexed address,indexed
+            address,uint256,uint256)
+          handler: handleSubmitProposal
+        - event: 'SubmitVote(indexed uint256,indexed address,indexed address,uint8)'
+          handler: handleSubmitVote
+        - event: >-
+            ProcessProposal(indexed uint256,indexed address,indexed
+            address,uint256,uint256,bool)
+          handler: handleProcessProposal
+        - event: 'Ragequit(indexed address,uint256)'
+          handler: handleRagequit
+        - event: 'Abort(indexed uint256,address)'
+          handler: handleAbort
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+  - kind: ethereum/contract
+    name: MolochV2Template
+    network: mainnet
+    source:
+      abi: V2Moloch
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/v2-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V2Moloch
+          file: ./abis/V2Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonComplete
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
+  - kind: ethereum/contract
     name: MolochV21Template
-    network: celo
+    network: mainnet
     source:
       abi: V21Moloch
     mapping:
@@ -109,8 +418,93 @@ templates:
         - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
+    name: MolochV22Template
+    network: mainnet
+    source:
+      abi: V22Moloch
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/v2-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+        - Shaman
+      abis:
+        - name: V22Moloch
+          file: ./abis/V22Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
+        - event: 'SetSpamPrevention(address,uint256)'
+          handler: handleSpamPrevention
+        - event: 'SetShaman(indexed address,bool)'
+          handler: handleSetShaman
+        - event: 'Shaman(indexed address,uint256,uint256,bool)'
+          handler: handleShaman
+  - kind: ethereum/contract
+    name: SafeMinionTemplate
+    network: mainnet
+    source:
+      abi: SafeMinion
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/safe-minion-mapping.ts
+      entities:
+        - Moloch
+        - Minion
+        - Proposal
+      abis:
+        - name: SafeMinion
+          file: ./abis/SafeMinion.json
+      eventHandlers:
+        - event: >-
+            ProposeNewAction(indexed bytes32,indexed
+            uint256,address,uint256,address,bool,bytes)
+          handler: handleProposeAction
+        - event: 'ExecuteAction(indexed bytes32,indexed uint256,bytes,address)'
+          handler: handleExecuteAction
+  - kind: ethereum/contract
     name: MinionTemplate
-    network: celo
+    network: mainnet
     source:
       abi: Minion
     mapping:
